correct wrong thingy, and add authors

--- a/Website/blog-2-week.html
+++ b/Website/blog-2-week.html
@@ -223,16 +223,16 @@
                             The energy of the city hit us instantly — loud, colourful, and alive.
                         </p>
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li>Wander the packed streets full of <strong>street food stalls and shops</strong></li>
                                 <li>Explore Korean <strong>skincare and beauty stores</strong></li>
                                 <li>Visit the <span class="wiki-term" data-term="Myeongdong Cathedral">Myeongdong Cathedral</span></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/U3ogKAT2Y1DwfTrR8">Myeongdong Korean BBQ All You Can Eat Pig
                                 Company</a><br>
-                            <strong>🏨 Where we stayed:</strong><br>
+                            <strong>Where we stayed:</strong><br>
                             <a href="https://maps.app.goo.gl/3ScAyv6894m8syxZ8">Hotel Prima Seoul:</a>
                             <p>
                                 Hotel Prima Seoul: The hotel was very good — modern rooms, friendly staff, and even a coin
@@ -283,14 +283,14 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li>Visit <strong><span class="wiki-term" data-term="Gyeongbokgung Palace">Gyeongbokgung</span></strong> and <strong><span class="wiki-term" data-term="Changdeokgung Palace">Changdeokgung Palaces</span></strong>
                                     (must-sees for first-time visitors)</li>
                                 <li>Walk through <strong>Bukchon Hanok Village</strong></li>
                                 <li>Experience Korean gaming culture at <strong>T1 Basecamp in Hongdae</strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/KGZHH59qE1Wk343e7">Insadong Maneul Bossam</a>
                         </div>
                         <div class="row g-3 mb-4">
@@ -329,7 +329,7 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li><a
                                         href="https://www.getyourguide.de/seoul-l197/seoul-dmz-tour-mit-optionaler-hangebrucke-t63099/">DMZ
@@ -337,7 +337,7 @@
                                 <li><strong>Yeouido Hangang Park</strong></li>
                                 <li><strong>Banpo Bridge Moonlight Rainbow Fountain</strong></li>
                             </ul>
-                            <strong>🍜 What to try:</strong><br>
+                            <strong>What to try:</strong><br>
                             <ul>
                                 <li>Korean corn dog</li>
                                 <li>Tteokbokki (spicy rice cakes)</li>
@@ -379,12 +379,12 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li>Walk through the forest up to <strong><span class="wiki-term" data-term="N Seoul Tower">N Seoul Tower</span></strong></li>
                                 <li>Explore the <strong>Seongsu area</strong>: cafés, shops, Seoul Forest</li>
                             </ul>
-                            <strong>🍜 Food spots:</strong><br>
+                            <strong>What to try:</strong><br>
                             <a href="https://maps.app.goo.gl/fKH4BTJLj1hHV5Zq7">Seongsu Darak</a><br>
                             <a href="https://maps.app.goo.gl/XHMqaaE3Z9a5SeUS6">Nirou Mian Guan</a>
                         </div>
@@ -426,13 +426,13 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do in Gangnam:</strong> <br>
+                            <strong>Things to do in Gangnam:</strong> <br>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Bongeunsa Temple">Bongeunsa Temple</span></strong></li>
                                 <li><strong>Starfield Library (COEX Mall)</strong></li>
                                 <li><strong>Seolleung and Jeongneung Royal Tombs</strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/YTzYA8UWrSp6kcSp7">Cheonsang Gaok</a><br>
                             <a href="https://maps.app.goo.gl/dUoMaSLXPRpnYuKu8">Oncheonjip</a>
                         </div>
@@ -500,7 +500,7 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Must-sees in Gyeongju:</strong> <br>
+                            <strong>Must-sees in Gyeongju:</strong> <br>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Gyeongju National Museum">Gyeongju National Museum</span></strong></li>
                                 <li><strong><span class="wiki-term" data-term="Wolji Pond">Wolji Pond</span></strong></li>
@@ -508,9 +508,9 @@
                                 <li><strong><span class="wiki-term" data-term="Tomb of King Michu">Tomb of King Michu</span> of Silla</strong></li>
                                 <li><strong><span class="wiki-term" data-term="Cheomseongdae Observatory">Cheomseongdae Observatory</span></strong></li>
                             </ul>
-                            <strong>🍜 What to eat:</strong><br>
+                            <strong>What to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/DdzKmKHMTaWnjcFr6">Yangbanjib</a><br>
-                            <strong>🏨 Where we stayed:</strong><br>
+                            <strong>Where we stayed:</strong><br>
                             <a href="https://maps.app.goo.gl/asRLp7rwJRpubiM48">Yettle Hanok Stay:</a>
                             <p>
                                 The hanok was fantastic — the owner helped us plan our two days in Gyeongju and even gave us
@@ -560,13 +560,13 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Bulguksa Temple">Bulguksa Temple</span></strong></li>
                                 <li><strong><span class="wiki-term" data-term="Seokguram Grotto">Seokguram Grotto</span></strong></li>
                                 <li><strong>Bomun Lake</strong></li>
                             </ul>
-                            <strong>🍜 Local cafés or restaurants:</strong><br>
+                            <strong>Local cafés or restaurants:</strong><br>
                             <a href="https://maps.app.goo.gl/jCyAqY6mtQkoKn9w6">Page 9 Café</a><br>
                             <a href="https://maps.app.goo.gl/znCaL6PBoK5a5Sjx8">Tigerkatsu</a>
                         </div>
@@ -617,15 +617,15 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li><strong>Haeundae Beach</strong></li>
                                 <li><strong>Busan X the SKY</strong></li>
                                 <li><strong><span class="wiki-term" data-term="Haedong Yonggungsa Temple">Haedong Yonggungsa Temple</span></strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/hAMZHPYecZR3See88">Sulodang</a><br>
-                            <strong>🏨 Where we stayed:</strong><br>
+                            <strong>Where we stayed:</strong><br>
                             <a href="https://maps.app.goo.gl/wtsy4ZVYMHjmV7V56">GNB Hotel:</a>
                             <p>
                                 The hotel was quite good — not exceptional, but in a convenient location and at a great
@@ -680,13 +680,13 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Top tips:</strong> <br>
+                            <strong>Top tips:</strong> <br>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Gamcheon Culture Village">Gamcheon Culture Village</span></strong></li>
                                 <li><strong>Taejongdae Park</strong></li>
                                 <li><strong>BIFF Square</strong></li>
                             </ul>
-                            <strong>🍜 Cafés & Food:</strong><br>
+                            <strong>Cafés & Food:</strong><br>
                             <a href="https://maps.app.goo.gl/G9pUrrPp4pvFkK6p7">DUF Coffee</a><br>
                             <a href="https://maps.app.goo.gl/JctqvaomjnCAEQZQ9">Dakgalbi</a>
                         </div>
@@ -740,16 +740,16 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do in Jeonju:</strong> <br>
+                            <strong>Things to do in Jeonju:</strong> <br>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Gyeonggijeon Shrine">Gyeonggijeon Shrine</span></strong></li>
                                 <li>Walk through the <strong><span class="wiki-term" data-term="Jeonju Hanok Village">Hanok Village</span></strong></li>
                                 <li>Explore <strong>Nambu Market</strong></li>
                             </ul>
-                            <strong>🍜 Must-eats:</strong><br>
+                            <strong>Must-eats:</strong><br>
                             <a href="https://maps.app.goo.gl/BkbjjCzrdCq2x1zw5">Goof-Off</a><br>
                             <a href="https://maps.app.goo.gl/u5SF3QRZaJHJ5L5a8">Ucheon Kudzu</a><br>
-                            <strong>🏨 Where we stayed:</strong><br>
+                            <strong>Where we stayed:</strong><br>
                             <a href="https://maps.app.goo.gl/xpRnLuGZLRqTt1xRA">And Spring:</a>
                             <p>
                                 The And Spring Airbnb was fantastic. It was quite small, but the location makes up for it,
@@ -815,13 +815,13 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li><strong>Gilinbong Mountain</strong></li>
                                 <li><strong>Ajung Lake</strong></li>
                                 <li><strong><span class="wiki-term" data-term="Jaman Mural Village">Jaman Mural Village</span> & Omokdae</strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/183yW7wUCcQVbDX97">Ondam</a><br>
                             <a href="https://maps.app.goo.gl/y8xUWASkMqJAjEat7">Ajuleu</a>
                         </div>
@@ -870,19 +870,19 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do in Hongdae:</strong> <br>
+                            <strong>Things to do in Hongdae:</strong> <br>
                             <ul>
                                 <li><strong>Hongdae Shopping Street</strong></li>
                                 <li><strong>Haneul Park</strong></li>
                                 <li>Pub crawl / nightlife</li>
                             </ul>
-                            <strong>🍜 Evening eats & drinks:</strong><br>
+                            <strong>Evening eats & drinks:</strong><br>
                             <a href="https://maps.app.goo.gl/sb7zy4tTXA6fvfHx9">Dokkaebi Party House</a><br>
                             <a href="https://maps.app.goo.gl/NPEho4H86khzhZ6J9">KB2</a><br>
                             <a href="https://maps.app.goo.gl/1ohSFu9bguVshowH8">La Bamba</a><br>
                             <a href="https://maps.app.goo.gl/ijrRBbimYcQugEzQA">Playground Pub</a><br>
                             <a href="https://maps.app.goo.gl/PSAuMoibAHH9Rgcq5">Oreno Ramen</a><br>
-                            <strong>🏨 Where we stayed:</strong><br>
+                            <strong>Where we stayed:</strong><br>
                             <a href="https://maps.app.goo.gl/an8w6jeyEH1jTySBA">Arirang Hill Hotel Dongdaemun:</a>
                             <p>
                                 The hotel was excellent — friendly staff and a surprisingly large room for Seoul.
@@ -938,13 +938,13 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong> <br>
+                            <strong>Things to do:</strong> <br>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Cheongun Literature Library">Cheongun Literature Library</span></strong></li>
                                 <li><strong>Seokpajeong</strong></li>
                                 <li><strong>Café Pokpo</strong></li>
                             </ul>
-                            <strong>🍜 Where to chill:</strong><br>
+                            <strong>Where to chill:</strong><br>
                             <a href="https://maps.app.goo.gl/mUp37LhHWGy5aDjYA">Cafe Pokpo</a><br>
                             <a href="https://maps.app.goo.gl/BJRgrVQ8CaxqQDqr9">Kandasoba Hongdae</a>
                         </div>
