--- a/Website/blog-3-week.html
+++ b/Website/blog-3-week.html
@@ -159,7 +159,7 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Gwangjang Market">Gwangjang Market</span></strong></li>
                                 <li><strong><span class="wiki-term" data-term="COEX">COEX Mall</span> & Library</strong></li>
@@ -200,11 +200,11 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li>Visit <strong><span class="wiki-term" data-term="N Seoul Tower">N Seoul Tower</span></strong> (Hiking or Cable Car)</li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             Paris Baguette (Breakfast) 
                             Korean BBQ (Dinner)
                         </div>
@@ -261,7 +261,7 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong>Kimnyeong Beach</strong></li>
                                 <li><strong>Maze Land</strong></li>
@@ -306,13 +306,13 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do in Jeju:</strong>
+                            <strong>Things to do in Jeju:</strong>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Songaksan">Songak-san</span></strong></li>
                                 <li><strong>Sangbansan Bomunsa Temple</strong></li>
                                 <li><strong>Cheonjeyon Waterfalls</strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/ho3xzp7YCiDZt6YQA">Jeju Yechan (Black Pork)</a>
                         </div>
                         <div class="row g-3 mb-5">
@@ -389,13 +389,13 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong>Cheongsapo Daritol Skywalk</strong></li>
                                 <li><strong>Busan x The Sky</strong></li>
                                 <li>Explore <strong>Haeundae</strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             <a href="https://maps.app.goo.gl/mrH1mX3BtYFr3AXH9">Premium Dakgalbi</a>
                         </div>
                         <div class="row g-3 mb-5">
@@ -449,14 +449,14 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Gwangjang Market">Gwangjang Market</span></strong></li>
                                 <li><strong><span class="wiki-term" data-term="Bukchon Hanok Village">Bukchon Hanok Village</span></strong></li>
                                 <li><strong>KFM-Center</strong></li>
                                 <li><strong><span class="wiki-term" data-term="Insa-dong">Insadong</span></strong> & <strong>Hongdae Karaoke</strong></li>
                             </ul>
-                            <strong>🍜 What to try:</strong><br>
+                            <strong>What to try:</strong><br>
                             Tteokbukki, Kimbap (at the market)
                         </div>
                         <div class="row g-3 mb-4">
@@ -502,12 +502,12 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li>Explore <strong><span class="wiki-term" data-term="Gangneung">Gangneung</span></strong></li>
                                 <li><strong><span class="wiki-term" data-term="Gangneung Jungang Market">Gangneung Jungang Market</span></strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             Local restaurant (Yukgaejang)
                         </div>
                         <div class="row g-3 mb-4">
@@ -532,11 +532,11 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong>Gyongpo Aquarium</strong></li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             Café "A brick"
                         </div>
                         <div class="row g-3 mb-4">
@@ -558,7 +558,7 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong>Hanseom Beach</strong> (Coastal Walk)</li>
                             </ul>
@@ -596,12 +596,12 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong>Hourglass Park</strong></li>
                                 <li><strong>Sun Cruise Hotel</strong> (Viewpoint)</li>
                             </ul>
-                            <strong>🍜 Where to eat:</strong><br>
+                            <strong>Where to eat:</strong><br>
                             Local restaurant (Snow Crab)
                         </div>
                         <div class="row g-3 mb-5">
@@ -653,12 +653,12 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong><span class="wiki-term" data-term="Yonsei University">Yonsei University</span></strong></li>
                                 <li><strong><span class="wiki-term" data-term="Namdaemun Market">Namdaemun Market</span></strong></li>
                             </ul>
-                            <strong>🍜 What to try:</strong><br>
+                            <strong>What to try:</strong><br>
                             Korean Fried Chicken
                         </div>
                         <div class="row g-3 mb-5">
@@ -694,7 +694,7 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong>T1 Café</strong></li>
                                 <li><strong>Jamsil Hangang Park</strong> (Drone Show)</li>
@@ -724,7 +724,7 @@
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
-                            <strong>💡 Things to do:</strong>
+                            <strong>Things to do:</strong>
                             <ul>
                                 <li><strong>LoL Park</strong></li>
                                 <li><strong><span class="wiki-term" data-term="Gwanghwamun Square">Gwanghwamun Square</span></strong></li>
